--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.3",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "chart.js": "^4.4.8",
     "clear": "^0.1.0",
     "cors": "^2.8.5",
+    "framer-motion": "^12.16.0",
+    "lucide-react": "^0.513.0",
+    "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
